themes: fix System theme color for ink tool nib
Like in #11964 for Default theme, the nib handle for the ink
tool is invisible on the System theme. Fix this by adjusting
the solution in a4f9e7e89a for use with the System theme.

--- a/themes/System/gimp.css
+++ b/themes/System/gimp.css
@@ -29,6 +29,13 @@ GimpColorNotebook tab {
     padding: 0 0 0 0;
 }
 
+/* Define colors so the nib handle appears in Gimp Ink Options */
+GimpBlobEditor {
+  color: @theme_fg_color;
+  background-color: @theme_bg_color;
+  border: 0.1em solid @theme_fg_color;
+}
+
 GimpDock entry,
 GimpDock spinbutton,
 GimpDock GimpColorNotebook spinbutton,
